--- a/main.html
+++ b/main.html
@@ -10,7 +10,28 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<h1>Student Details</h1>
+<table border="1" bgcolor="yellow">
+	<thead>
+		<tr>
+			<th>NAME</th>
+			<TH>AGE</TH>
+			<TH>BRANCH</TH>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
+		</tr>
+		<tr>
+			<td>Adil</td>
+			<td>21</td>
+			<td>ECE</td>
+		</tr>
+	</tbody>
+</table>
 </body>
 
 </html>
