--- a/main.html
+++ b/main.html
@@ -10,13 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h1>Student Details</h1>
+	
 <table border="1" bgcolor="yellow">
+	<caption>Student Details</caption>
 	<thead>
 		<tr>
 			<th>NAME</th>
-			<TH>AGE</TH>
-			<TH>BRANCH</TH>
+			<th>AGE</th>
+			<th>BRANCH</th>
 		</tr>
 	</thead>
 	<tbody>
